<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/item_row_img"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TextContentTitle.Row"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/item_row_name"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/tv_item_remarks"
            style="@style/TextContentTitle.Row"
            android:text="@string/item_row_jabatan"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_below="@id/tv_item_name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_toEndOf="@id/img_item_photo"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_share"
                style="@style/ButtonStyle"
                android:text="@string/item_row_share"/>
            <Button
                android:id="@+id/btn_detail"
                style="@style/ButtonStyle"
                android:text="@string/item_row_detail"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>